cmake_minimum_required(VERSION 3.10)
project(codeforces)

set(CMAKE_CXX_STANDARD 11)

add_executable(codeforces main.cpp)
add_executable(p1 tinkoffInternshipWarmup475/p1.cpp)
add_executable(977A 977/A.cpp)
add_executable(977B 977/B.cpp)
add_executable(977C 977/C.cpp)
add_executable(975A 975/A.cpp)
add_executable(975B 975/B.cpp)
add_executable(975C 975/C.cpp)
add_executable(lowerBound gym/lowerBound.cpp)
add_executable(topo gym/topologicalSort.cpp)
add_executable(977D 977/D.cpp)
add_executable(977F 977/F.cpp)
add_executable(977E 977/E.cpp)
add_executable(980A 980/A.cpp)
add_executable(980B 980/B.cpp)
add_executable(980C 980/C.cpp)
add_executable(980E 980/E.cpp)
add_executable(LCA gym/LCA.cpp)
add_executable(481A 481/A.cpp)
add_executable(481B 481/B.cpp)
add_executable(481C 481/C.cpp)
add_executable(481E 481/E.cpp)
add_executable(481F 481/F.cpp)
add_executable(UFDS LIBRARY/GRAPHS/unionDisjoint.cpp)
add_executable(ST LIBRARY/GRAPHS/segmentTree.cpp)
add_executable(FT LIBRARY/GRAPHS/fenwickTree.cpp)
add_executable(GSS1 gym/segmentTree/GSS1.cpp)
add_executable(486A 486/A.cpp)
add_executable(486B 486/B.cpp)
add_executable(486C 486/C.cpp)
add_executable(486D 486/D.cpp)
add_executable(486E 486/E.cpp)
add_executable(486F 486/F.cpp)
add_executable(485B 485/B.cpp)
add_executable(485C 485/C.cpp)
add_executable(485D 485/D.cpp)
add_executable(482C 482/C.cpp)
add_executable(482D 482/D.cpp)
add_executable(484D 484/D.cpp)
add_executable(ECR42C ECR42/C.cpp)
add_executable(ECR42D ECR42/D.cpp)
add_executable(ECR42A ECR42/A.cpp)
add_executable(ECR42B ECR42/B.cpp)
add_executable(ECR44C ECR44/C.cpp)
add_executable(487A 487/A.cpp)
add_executable(487B 487/B.cpp)
add_executable(487C 487/C.cpp)
add_executable(10004 stevenHalim/Graphs/BFS/variants/10004.cpp)
add_executable(459 stevenHalim/Graphs/DFS/FloodFill/459.cpp)
add_executable(315 stevenHalim/Graphs/DFS/Articulation/315.cpp)
add_executable(276D BITMASK/276D.cpp)
add_executable(580D BITMASK/580D.cpp)
add_executable(812B BITMASK/812B.cpp)